--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
